Added DownloadCkpt.py to download efficientdet_d0

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,11 @@ lib64/
 parts/
 sdist/
 var/
+images/
+efficientdet-d0/
 projects/Japanese_RoadSigns/models
+projects/Japanese_RoadSigns/models_*
+
 *.bak
 
 wheels/
