--- a/projects/Japanese_RoadSigns/configs/detect.config
+++ b/projects/Japanese_RoadSigns/configs/detect.config
@@ -2,15 +2,15 @@
 
 [detection]
 name               = efficientdet-d0
-logdir             = ./projects/Kajima/
-label_map_pbtxt    = ./projects/Kajima/train/kajima_label_map.pbtxt
+logdir             = ./projects/Japanese_RoadSigns/
+label_map_pbtxt    = ./projects/Japanese_RoadSigns/train/Japanese_RoadSigns_label_map.pbtxt
 threads            = 0
 delete_logdir      = True
 batch_size         = 1
-checkpoint_dir    = ./projects/Kajima/models
-savedmodel_dir     = ./projects/Kajima/saved_model
-hparams            = ./projects/Kajima/configs/default.yaml
-output_dir         = ./projects/Kajima/outputs
+checkpoint_dir    = ./projects/Japanese_RoadSigns/models
+savedmodel_dir     = ./projects/Japanese_RoadSigns/saved_model
+hparams            = ./projects/Japanese_RoadSigns/configs/default.yaml
+output_dir         = ./projects/Japanese_RoadSigns/outputs
 
 [visualization]
 line_thickness  = 2
