--- a/projects/Japanese_RoadSigns/configs/train.config
+++ b/projects/Japanese_RoadSigns/configs/train.config
@@ -1,8 +1,8 @@
-;./project/Kajima/configs/train.config
+;./project//configs/train.config
 [project]
-name        = Kajima
-owner       = Kajima
-dataset     = Kajima
+name        = Japanese_RoadSigns
+owner       = Japanese_RoadSigns
+dataset     = Japanese_RoadSigns
 
 [hardware]
 tpu         = None
@@ -13,7 +13,7 @@ use_xla     = None
 
 [model]
 name        = efficientdet-d0
-model_dir   = ./projects/Kajima/models/
+model_dir   = ./projects/Japanese_RoadSigns/models/
 profile     = None
 ckpt        = ./efficientdet-d0
 
@@ -21,12 +21,15 @@ ckpt        = ./efficientdet-d0
 mode                      = train_and_eval
 run_epoch_in_child_process= False
 batch_size                = 4
-epochs                    = 50
+epochs                    = 100
 save_checkpoints_steps    = 100
-file_pattern              = ./projects/Kajima/train/512x512_kajima.tfrecord
+file_pattern              = ./projects/Japanese_RoadSigns/train/japanese_roadsigns.tfrecord
+label_map_pbtxt           = ./projects/Japanese_RoadSigns/train/label_map.pbtxt
 
 examples_per_epoch        = 64
-hparams                   = ./projects/Kajima/configs/default.yaml
+;hparams                   = ./projects/Japanese_RoadSigns/configs/default.yaml
+;hparams                   = label_map=./projects/Japanese_RoadSigns/configs/label_map.yaml
+
 cores                     = 0
 use_spatial_partition     = False
 
@@ -34,10 +37,10 @@ cores_per_replica         = 2
 input_partition_dims      = [1, 2, 1, 1]
 tf_random_seed            = False
 use_fake_data             = False
-training_losses_file      = ./projects/Kajima/train_losses.csv
+training_losses_file      = ./projects/Japanese_RoadSigns/train_losses.csv
 
 [validation]
-file_pattern            = ./projects/Kajima/valid/512x512_kajima.tfrecord
+file_pattern            = ./projects/Japanese_RoadSigns/valid/japanese_roadsigns.tfrecord
 batch_size              = 4
 eval_samples            = 64
 iterations_per_loop     = 20
@@ -45,7 +48,9 @@ val_json_file           = None
 eval_after_train        = True
 min_eval_interval       = 180
 timeout                 = None
-evaluation_results_file = ./projects/Kajima/eval_results.csv
+evaluation_results_file = ./projects/Japanese_RoadSigns/eval_results.csv
+;2021/11/11
+categorized_ap_file     = ./projects/Japanese_RoadSigns/categorized_ap.csv
 
 [early_stopping]
 patience   = 10
