Updated main2.py to write coco_metrics to csv file

--- a/projects/Japanese_RoadSigns/configs/train.config
+++ b/projects/Japanese_RoadSigns/configs/train.config
@@ -26,7 +26,7 @@ save_checkpoints_steps    = 100
 file_pattern              = ./projects/Japanese_RoadSigns/train/japanese_roadsigns.tfrecord
 label_map_pbtxt           = ./projects/Japanese_RoadSigns/train/label_map.pbtxt
 
-examples_per_epoch        = 64
+;examples_per_epoch        = 64
 ;hparams                   = ./projects/Japanese_RoadSigns/configs/default.yaml
 ;hparams                   = label_map=./projects/Japanese_RoadSigns/configs/label_map.yaml
 
@@ -38,11 +38,14 @@ input_partition_dims      = [1, 2, 1, 1]
 tf_random_seed            = False
 use_fake_data             = False
 training_losses_file      = ./projects/Japanese_RoadSigns/train_losses.csv
+num_examples_per_epoch    = 200
 
 [validation]
 file_pattern            = ./projects/Japanese_RoadSigns/valid/japanese_roadsigns.tfrecord
 batch_size              = 4
-eval_samples            = 64
+;2021/11/20
+eval_samples            = 200
+eval_dir                = ./projects/Japanese_RoadSigns/eval
 iterations_per_loop     = 20
 val_json_file           = None
 eval_after_train        = True
@@ -53,6 +56,7 @@ evaluation_results_file = ./projects/Japanese_RoadSigns/eval_results.csv
 categorized_ap_file     = ./projects/Japanese_RoadSigns/categorized_ap.csv
 
 [early_stopping]
+metric     = map
 patience   = 10
 
 [epoch_change_notifier]
