--- a/projects/Japanese_RoadSigns/configs/train.config
+++ b/projects/Japanese_RoadSigns/configs/train.config
@@ -28,7 +28,7 @@ label_map_pbtxt           = ./projects/Japanese_RoadSigns/train/label_map.pbtxt
 
 ;examples_per_epoch        = 100
 ;hparams                   = ./projects/Japanese_RoadSigns/configs/default.yaml
-;hparams                   = label_map=./projects/Japanese_RoadSigns/configs/label_map.yaml
+hparams                   = label_map=./projects/Japanese_RoadSigns/configs/label_map.yaml
 
 cores                     = 0
 use_spatial_partition     = False
@@ -37,7 +37,7 @@ cores_per_replica         = 2
 input_partition_dims      = [1, 2, 1, 1]
 tf_random_seed            = False
 use_fake_data             = False
-training_losses_file      = ./projects/Japanese_RoadSigns/train_losses.csv
+training_losses_file      = ./projects/Japanese_RoadSigns/eval/train_losses.csv
 
 num_examples_per_epoch    = 400
 
@@ -48,14 +48,15 @@ batch_size              = 4
 eval_samples            = 400
 
 eval_dir                = ./projects/Japanese_RoadSigns/eval
-iterations_per_loop     = 20
+iterations_per_loop     = 1000
 val_json_file           = None
 eval_after_train        = True
 min_eval_interval       = 180
 timeout                 = None
-evaluation_results_file = ./projects/Japanese_RoadSigns/eval_results.csv
-;2021/11/11
-coco_ap_per_class_file  = ./projects/Japanese_RoadSigns/categorized_ap.csv
+;2021/11/27
+coco_metrics_file       = ./projects/Japanese_RoadSigns/eval/coco_metrics.csv
+;2021/11/27
+coco_ap_per_class_file  = ./projects/Japanese_RoadSigns/eval/coco_ap_per_class.csv
 disable_per_clsss_ap    = False
 
 [early_stopping]
